--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713545104000-->
-[德国逮捕2俄间谍计划攻击美军基地](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0)
+<!--1713552301000-->
+[美众院即将投票对乌援助法案 五角大楼：有些军援几天内就能运抵乌克兰](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88-%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC-%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0)
 ------
 
-<div>18/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/7c78ebe4-fdc4-11ee-a0fd-005056bfb2b6/w:1280/p:16x9/66210160d77c5330d1724475.png"><p><strong></strong></p><div><p>两名嫌犯是在德国东南部的拜罗伊特(Bayreuth)被拘捕的。德国检方18ri 表示，2名德俄双重国籍人士因涉嫌策划在德国进行蓄意破坏攻击而被捕，两人锁定目标包括美国军事设施，目的为了削弱德国对乌克兰的军事支持。</p><p>检察官说，这两名男子的名字仅证实为狄特尔S.（Dieter S.）和亚历山大 J.（Alexander J.）。正在布鲁塞尔开会的德国总理朔尔茨表示，“我们永远不会接受间谍活动在德国发生”。 俄罗斯方面则在其驻德国大使馆在 X 上发布的消息，谴责这种“荒唐可笑”以及缺乏“证据”的指控。</p><p>据《明镜周刊》报道，嫌疑人以及德国联邦国防军车队尤其关注巴伐利亚美军格拉芬沃尔(Grafenwöhr)基地，乌克兰士兵在那里接受使用美国艾布拉姆斯主战坦克的训练。</p><p>据《明镜周刊》报道，主嫌犯迪特尔·S. (Dieter S.) 现年 39 岁，自 2023 年 10 月以来一直在与一名与俄罗斯情报部门有联系的人员交换信息，以期在德国领土上实施可能的破坏活动。 据检方称，他的同伙亚历山大·J.(Alexander J.)现年 37 岁，从 2024 年 3 月底开始和迪特尔有密切的联系。</p><p>检察官称，“这些行动的目的尤其是破坏德国对乌克兰对抗俄罗斯侵略战争的军事支持”。 据报道，迪特·S. 声称自己准备好“对德国的军事基础设施和工业场所进行爆炸袭击和纵火袭击”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%25BE%25B7%25E5%259B%25BD%25E9%2580%25AE%25E6%258D%25952%25E4%25BF%2584%25E9%2597%25B4%25E8%25B0%258D%25E8%25AE%25A1%25E5%2588%2592%25E6%2594%25BB%25E5%2587%25BB%25E7%25BE%258E%25E5%2586%259B%25E5%259F%25BA%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 20:25</div><img src="https://s.rfi.fr/media/display/48c829c8-fe77-11ee-9ad8-005056a90284/w:1280/p:16x9/AP24109824140967.jpg"><p><strong>据两位美国官员透露，五角大楼正准备迅速批准一项对乌克兰的武器援助计划，其中包括急需的火炮和防空系统，此刻正值美国国会正在排队投票以通过对乌的额外军援拨款。        </strong></p><div><p>上述两位美国官员向政客新闻网表示，拜登政府尚未最终决定这批资金的规模和内容，他们因涉及敏感的内部讨论而被允许匿名。但其中一位官员说，五角大楼官员正在努力汇总一揽子美国装备，一旦立法通过并经总统签署，就能迅速通过官僚程序。该官员说：“他们将很快向（奥斯汀）防长提出建议，随后很快就会提交给总统”。</p><p>两位官员说，这笔资金将包括用于补充乌克兰武器库的火炮和防空系统，这将是美国自去年12月因国会对总统追加援助的要求停滞不前而耗尽资金以来的第二笔资金。白宫上个月批准了一项总额为3亿美元的对乌紧急援助计划，使用的是之前合同节省下来的成本。</p><p>第一位官员说，许多美国武器已经存放在欧洲各地的仓库中，可以立即运往乌克兰。有些物资几天内就能运抵乌克兰，有些则可能需要数周时间。</p><p>美国国防部发言人莱德（Patrick Ryder）少将拒绝透露即将到来的一揽子计划的具体内容，但在周四告诉记者，美国拥有“非常强大的物流网络，使我们能够非常迅速地运送物资”——可能在几天之内。莱德说，“我们当然理解并重视这种紧迫性，并已做好迅速行动的准备”。</p><p>美国众议院即将于周六就四项法案进行投票，这些法案将拨款950亿美元用于援助乌克兰、以色列和印太地区的合作伙伴。一旦获得通过，参议院还必须在拜登签署之前批准该援助方案。在用于乌克兰的近610亿美元中，约480亿美元将拨给五角大楼，用于武装基辅、补充武器和支付在欧洲的军事行动。该法案为美军提供了232亿美元，用于补充提供给乌克兰的武器装备库存。</p><p>另有138亿美元将用于“乌克兰安全援助计划”，供五角大楼为基辅购买新武器。还有113亿美元将用于加强在欧洲的美军行动。该立法重新授权五角大楼将价值78亿美元的现有武器从库存中运往乌克兰，然后由一揽子计划中增加的资金取代。</p><p>美国国防部负责国际安全事务的助理防长沃兰德（Celeste Wallander）最近告诉议员们，一旦国会最终批准援助，五角大楼将迅速开始运送弹药、炮弹和防空武器。</p><p>沃兰德对美国众议院军事委员会说：“在（美国欧洲司令部）和（美国运输司令部）的支持下，我们将能够在一两周内立即开始向乌克兰提供弹药、炮弹和拦截器”。</p><p>拜登政府多名高官本周强调，如果美国国会不通过额外拨款，乌克兰将很快陷入困境。美国中情局局长比尔·伯恩斯（Bill Burns）说，如果没有美国的新武器援助，乌克兰可能在今年年底前被击败。</p><p>美国国防部长奥斯汀（Lloyd Austin）则告诉议员们，在乌军苦于弹药短缺之际，俄军正在取得进展。奥斯汀指出：“我们已经看到战场上的局势开始向对俄罗斯有利的方向转变。我们看到他们正在逐步取得进展。我们看到乌克兰人在坚守阵地方面受到了挑战”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E5%258D%25B3%25E5%25B0%2586%25E6%258A%2595%25E7%25A5%25A8%25E5%25AF%25B9%25E4%25B9%258C%25E6%258F%25B4%25E5%258A%25A9%25E6%25B3%2595%25E6%25A1%2588-%25E4%25BA%2594%25E8%25A7%2592%25E5%25A4%25A7%25E6%25A5%25BC-%25E6%259C%2589%25E4%25BA%259B%25E5%2586%259B%25E6%258F%25B4%25E5%2587%25A0%25E5%25A4%25A9%25E5%2586%2585%25E5%25B0%25B1%25E8%2583%25BD%25E8%25BF%2590%25E6%258A%25B5%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
