--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[伊朗中部发生爆炸 国际原子能机构称当地核设施&quot;未受损”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8-%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD-%E6%9C%AA%E5%8F%97%E6%8D%9F)
+<!--1713543301000-->
+[布林肯: 中国不能一边希望与欧洲友好 一边助长对欧洲安全的最大威胁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B8%83%E6%9E%97%E8%82%AF-%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD-%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81)
 ------
 
-<div>19/04/2024 - 11:23</div><img src="https://s.rfi.fr/media/display/a451c2ec-f849-11ee-b62a-005056a97e36/w:1280/p:16x9/2024-04-11T141133Z_1508015650_RC2D47A0VBVU_RTRMADP_3_UKRAINE-CRISIS-IAEA.JPG"><p><strong>总部设在奥地利维也纳的国际原子能机构（IAEA）宣布，周五在伊朗中部发生爆炸后，那里的核设施 "没有受到任何损害"。        </strong></p><div><p>国际原子能机构在社交网络X上"继续呼吁各方都保持高度克制，并重申任何核设施都不应成为军事冲突的目标"。</p><p>据报道，伊朗中部是几个已知核设施的所在地。据伊朗“塔斯尼姆”通讯社称，位于伊斯法罕地区的核设施"完全-安全"。</p><p>伊朗官方通讯社Irna也强调说："重要设施，尤其是核设施，完全安全，没有任何事故报告"。</p><p>周五凌晨伊朗中部发生了几起爆炸事件，美国高级官员暗示以色列发动了袭击，以报复上周末针对以色列的史无前例的无人机和导弹袭击。</p><p>然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>最初对伊朗中部发生爆炸的反应仍然非常谨慎，各国政治领导人纷纷呼吁"不要升级"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWx4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%258F%2591%25E7%2594%259F%25E7%2588%2586%25E7%2582%25B8-%25E5%259B%25BD%25E9%2599%2585%25E5%258E%259F%25E5%25AD%2590%25E8%2583%25BD%25E6%259C%25BA%25E6%259E%2584%25E7%25A7%25B0%25E5%25BD%2593%25E5%259C%25B0%25E6%25A0%25B8%25E8%25AE%25BE%25E6%2596%25BD-%25E6%259C%25AA%25E5%258F%2597%25E6%258D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWx4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 17:33</div><img src="https://s.rfi.fr/media/display/660bc7fe-fe56-11ee-9a83-005056bf30b7/w:1280/p:16x9/AP24110423238580%20%281%29.jpg"><p><strong>七国集团（G7）在意大利卡普里岛举行外长会议，根据周五的会议最后公报，G7对中国向俄罗斯转让材料助其在乌克兰的战争机器表示"强烈关切"。        </strong></p><div><p>在周五的新闻发布会上，美国国务卿安东尼-布林肯指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>据美国外交人士称，布林肯是在一次专门讨论支持乌克兰抵抗俄罗斯入侵的工作会议上表达了对中国向俄罗斯提供军民两用产品支持问题的担忧，并表示支持两年多来一直与俄罗斯军队作战的乌克兰。</p><p>法新社4月19日报道，G7外长"在会议结束时发表的公报中说："我们对中国公司向俄罗斯转让军民两用材料和武器部件深表关切，俄罗斯正利用这些材料和部件提高其军事生产。</p><p>G7外长指出，中国的转让使俄罗斯得以重建和振兴其国防工业，对乌克兰和国际和平与安全构成威胁"，他们对此表示遗憾。</p><p>G7敦促"中国因该确保停止这种支持，因为这将延长冲突，增加俄罗斯对其邻国的威胁"。</p><p>七国集团由美国、日本、加拿大、法国、德国和今年担任轮值主席国的意大利组成。</p><p>该报道说，特别是，美国人希望欧洲国家能向中国政府施压，迫使其减少对俄罗斯的军事支持，因为华盛顿自己也承认，俄罗斯军队正在乌克兰领土上占据优势。</p><p>美国说，几个月来，它一直在目睹中国向俄罗斯转让装备，莫斯科正利用这些装备重建其国防工业，这在乌克兰战场上得到了反映。</p><p>华盛顿给中国划定了一条红线，即不得直接提供武器给俄罗斯用于乌克兰战争--迄今为止还没有看到相反的证据。</p><p>但在中俄关系加深的背景下，美国越来越多地谴责北京通过“迂回渠道”支持俄罗斯，并将中国这些支持与俄罗斯在乌克兰的战争建立直接的关联。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2N.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%258D%25E8%2583%25BD%25E4%25B8%2580%25E8%25BE%25B9%25E5%25B8%258C%25E6%259C%259B%25E4%25B8%258E%25E6%25AC%25A7%25E6%25B4%25B2%25E5%258F%258B%25E5%25A5%25BD-%25E4%25B8%2580%25E8%25BE%25B9%25E5%258A%25A9%25E9%2595%25BF%25E5%25AF%25B9%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25AE%2589%25E5%2585%25A8%25E7%259A%2584%25E6%259C%2580%25E5%25A4%25A7%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2N.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
