--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-21 [中国在巴西和阿根廷之间的战略异动引起关注](/articles/voa/1016237.md)
+
+4-21 [港珠澳大桥开通五年仍难逃“鬼桥”命运](/articles/voa/1016238.md)
+
 4-21 [布林肯下周再访中国，美中紧张关系预计仍难实现突破改善](/articles/voa/1016239.md)
 
 4-21 [纽约时报:东京奥运会前23名中国游泳选手药检呈阳性，但仍获准参赛赢得奖牌](/articles/voa/1016240.md)
@@ -596,8 +600,4 @@
 4-9 [英国外相卡梅伦访美，敦促美方对乌克兰提供新的援助](/articles/voa/1016535.md)
 
 4-9 [赵乐际本周率团访朝鲜，新冠疫情后中朝最高层互动](/articles/voa/1016536.md)
-
-4-9 [美中撞机23周年 擦枪走火风险愈来愈多](/articles/voa/1016537.md)
-
-4-9 [死无葬身之地？ 中国人入土难为安](/articles/voa/1016538.md)
 
